gloo-all/40-consul-discovery/default-vs-jsonplaceholder.yaml
apiVersion: gateway.solo.io/v1
kind: VirtualService
metadata:
  name: consul-vs
  namespace: gloo-system
spec:
  virtualHost:
    domains:
    - 'ceposta-gloo-demo.solo.io'
    routes:
    - matchers:
      - prefix: /todos
      options:
        hostRewrite: "jsonplaceholder.typicode.com"
      routeAction:        
        single:
          upstream:
            name: jsonplaceholder
            namespace: gloo-system
    - matchers:
      - prefix: /
      routeAction:
        single:
          upstream:
            name: default-gloo-consul-server-8500
            namespace: gloo-system
